k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  selector:
    app: stock-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
